--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -20,7 +20,7 @@
 .mockup {
   flex: 0 0 auto; /* Prevents image from shrinking */
   max-width: 200px; /* Adjust size as needed */
-  margin: 0; /* Reset margin */
+  margin: 120px; /* Reset margin */
 }
 
 .text {
@@ -28,7 +28,8 @@
   color: #bdbcb9; /* Ensure text color is appropriate */
   text-align: right; /* Aligns text to the right within its container */
   font-size: 2.5rem; /* Adjust size if needed */
-  margin-right: 20px; /* Adjust margin as needed */
+  margin-right: 180px; /* Adjust margin as needed */
+  margin-left: 180px; /* Adjust margin as needed */
   font-weight: 700;
 }
 
