--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -46,12 +46,14 @@
   .mockup {
     margin-top: 80px; /* Reset margin for better spacing control */
     max-width: 120px;
+    margin-bottom: 0;
   }
 
   .text {
     margin: 80px 0; /* Adds space around the text */
     font-size: 1.5rem; /* Adjust font size for smaller screens */
     text-align: center; /* Center text */
+    
   }
 }
 
@@ -69,7 +71,8 @@
   .text {
     font-size: 1.2rem; /* Adjust font size for very small screens */
     margin-top: 50px 0; /* Further reduced margin */
-    margin: 80px 0; /* Further reduced margin */
+    margin-left: 30px;
+    margin-right: 30px; /* Further reduced margin */
     text-align: center; /* Center text */
   }
 }
