--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -25,7 +25,7 @@
 
 .text {
   font-family: 'Poppins', sans-serif;
-  color: #bdbcb9; /* Ensure text color is appropriate */
+  color: #eee2c3; /* Ensure text color is appropriate */
   text-align: right; /* Aligns text to the right within its container */
   font-size: 2.8rem; /* Adjust size if needed */
   margin-right: 180px; /* Adjust margin as needed */
