--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -101,6 +101,7 @@
     }
 
     .nav-links li {
+        font-size: 40px;
         margin: 1.5rem 0;
         opacity: 0;
         transition: opacity 0.5s ease-in;
