--- a/src/components/css/Footer.css
+++ b/src/components/css/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #281c14; /* Navbar background color */
+  background-color: #201710; /* Navbar background color */
   color: #ffd28d; /* Text color */
   padding: 40px 20px; /* Increase padding for a bigger bar */
   text-align: center;
