--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -61,7 +61,7 @@
 /* Media Query for Tablet and Mobile Devices */
 @media (max-width: 1024px) {
     .logo {
-        font-size: 2rem;
+        font-size: 2.5rem;
     }
 
     .navbar {
@@ -76,11 +76,11 @@
 /* Media Query for Mobile Devices */
 @media (max-width: 768px) {
     .logo {
-        font-size: 1.5rem;
+        font-size: 2.5rem;
     }
 
     .navbar {
-        padding: 0.5rem;
+        padding: 0.2rem;
         height: 90px; /* Ensures consistent height */
     }
 
@@ -89,9 +89,9 @@
         right: 0;
         top: 0;
         height: 100vh; /* Full viewport height */
-        width: 100vw; /* Full viewport width */
+        width: 80vw; /* Full viewport width */
         background-color: rgba(40, 28, 20, 0.8); /* Semi-transparent dark background */
-        backdrop-filter: blur(10px); /* Blur effect */
+        backdrop-filter: blur(10px);
         flex-direction: column;
         align-items: center;
         transform: translateX(100%);
