--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -9,7 +9,7 @@
 }
 
 .navbar {
-    background-color: rgba(35, 24, 16, 0.6); /* Semi-transparent dark background */
+    background-color: rgb(35, 24, 16); /* Semi-transparent dark background */
     color: #ffd28d;
     display: flex;
     justify-content: space-between;
@@ -90,7 +90,7 @@
         top: 0;
         height: 100vh; /* Full viewport height */
         width: 80vw; /* Full viewport width */
-        background-color: rgba(40, 28, 20, 0.8); /* Semi-transparent dark background */
+        background-color: rgb(40, 29, 21); /* Semi-transparent dark background */
         backdrop-filter: blur(10px);
         flex-direction: column;
         align-items: center;
