--- a/src/components/css/Features.css
+++ b/src/components/css/Features.css
@@ -10,7 +10,6 @@
     max-width: 800px;
     margin: 0 auto;
     box-sizing: border-box; /* Prevent overflow */
-    
 }
 
 .features-heading {
@@ -36,7 +35,6 @@
     font-weight: 600;
     text-align: center;
     margin-bottom: 0.5rem;
-
 }
 
 .feature-description {
@@ -47,68 +45,64 @@
 
 @media (max-width: 1200px) {
     .features-heading {
-        font-size: 8rem;
+        font-size: 4rem; /* Adjusted size for better scaling */
     }
 }
 
 @media (max-width: 992px) {
     .features-heading {
-        font-size: 6rem;
+        font-size: 3.5rem; /* Adjusted size for medium screens */
     }
 
     .feature-title {
-        font-size: 2.5rem;
+        font-size: 1.8rem; /* Slightly smaller for better readability */
     }
 
     .feature-description {
-        font-size: 1.2rem;
+        font-size: 1.1rem; /* Adjusted size */
     }
 }
 
 @media (max-width: 768px) {
     .features-heading {
-        font-size: 5rem;
-        padding: 40px;
+        font-size: 3rem; /* Adjusted to maintain balance */
+        padding: 20px; /* Adjusted padding */
     }
 
     .feature-item {
-        padding: 5rem;
+        padding: 2rem; /* Reduced padding for smaller screens */
         width: 100%;
         max-width: 90%; 
-        margin-bottom: 50px;
+        margin-bottom: 20px; /* Reduced margin-bottom */
     }
 
     .feature-title {
-        font-size: 2rem;
+        font-size: 1.6rem;
     }
 
     .feature-description {
-        font-size: 1.5rem;
+        font-size: 1.2rem; /* Slight increase for readability */
     }
 }
 
 @media (max-width: 576px) {
     .features-heading {
-        font-size: 4rem;
-        padding: 40px;
+        font-size: 2.5rem; /* Further reduced for very small screens */
+        padding: 20px; /* Reduced padding */
     }
 
-
-
     .feature-item {
-        padding: 3
-        rem;
+        padding: 1.5rem; /* Further reduced padding */
         width: 100%;
         max-width: 90%; 
-        /* margin: 0 auto; */
-        margin-bottom: 50px;
+        margin-bottom: 20px; /* Further reduced margin-bottom */
     }
 
     .feature-title {
-        font-size: 3rem;
+        font-size: 1.5rem; /* Adjusted for very small screens */
     }
 
     .feature-description {
-        font-size: 1.2rem;
+        font-size: 1rem; /* Adjusted for very small screens */
     }
 }
