--- a/src/components/css/Features.css
+++ b/src/components/css/Features.css
@@ -18,7 +18,7 @@
 .features-heading {
   font-size: 5rem;
   font-weight: 600;
-  color: #ffd28d;
+  color: #47300e;
   text-align: center;
   padding-top: 80px;
   margin: 0 auto 1.5rem auto;
@@ -49,7 +49,7 @@
 
 .feature-description {
   font-size: 1rem;
-  color: #918585;
+  color: #70411a;
   text-align: center;
 }
 
