--- a/src/components/css/Footer.css
+++ b/src/components/css/Footer.css
@@ -1,7 +1,7 @@
 .footer {
-  background-color: #201710;
+  background-color: rgb(236, 203, 126);
   color: #ffd28d;
-  padding: 40px 20px;
+  padding: 10px 20px;
   text-align: center;
   position: relative;
   width: 100%;
@@ -16,7 +16,7 @@
 }
 
 .footer-link {
-  color: #ffd28d;
+  color: #675438;
   text-decoration: none;
   font-weight: bold;
   font-size: 16px;
