--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #281c14;
+  color: rgba(83, 62, 34, 0.87);
+  background-color: #fef9f3;
 
   /* #ffd28d icon text*/
   /* #281c14 nav */
